argocd/add-custom-kustomize-merged.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: argocd-repo-server
#   labels:
#     app.kubernetes.io/component: repo-server
#     app.kubernetes.io/name: argocd-repo-server
#     app.kubernetes.io/part-of: argocd
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       'app.kubernetes.io/name': argocd-repo-server
#   template:
#     metadata:
#       labels:
#         app.kubernetes.io/name: argocd-repo-server  
#     spec:
#       imagePullSecrets:
#         - name: private-registry
#       # 1. Define an emptyDir volume which will hold the custom binaries
#       volumes:
#         - name: custom-tools
#           emptyDir: {}
#         # - name: cmp-plugin
#         ## Added this
#         ## Add this when you are using age ONLY. Not need using AWS KMS key for encryption
#         - name: sops-age
#           secret:
#             secretName: sops-age
#       # 2. Use an init container to download/copy custom binaries into the emptyDir
#       initContainers:
#       - image: alpine:3.8
#         imagePullPolicy: IfNotPresent
#         name: download-tools
#         resources: {}
#         terminationMessagePath: /dev/termination-log
#         terminationMessagePolicy: File
        
#         args:
#         - wget -qO- https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv5.2.1/kustomize_v5.2.1_linux_amd64.tar.gz |
#           tar -xvzf - && mv kustomize /custom-tools/kustomize_5_2_1
#         command:
#         - sh
#         - -c
        
#         volumeMounts:
#         - mountPath: /custom-tools
#           name: custom-tools
#       - args:
#         - echo "Installing KSOPS..."; cp ksops /custom-tools/; cp /custom-tools/ksops
#           cp $GOPATH/bin/kustomize /custom-tools/; echo "Done."
#         command:
#         - /bin/sh
#         - -c
#         image: viaductoss/ksops:v4.1.0
#         name: install-ksops
#         volumeMounts:
#         - mountPath: /custom-tools
#           name: custom-tools
      
#       containers:  
#         - name: argocd-repo-server
#           # envFrom:
#           # - secretRef:
#           #     name: vault-configuration 
#           volumeMounts:
  
#           - mountPath: /custom-tools
#             name: custom-tools
#           - mountPath: /usr/local/bin/kustomize
#             name: custom-tools
#             subPath: kustomize
#           - mountPath: /.config/kustomize/plugin/viaduct.ai/v1/ksops/ksops
#             name: custom-tools
#             subPath: ksops
#           - mountPath: /.config/sops/age/keys.so
#             name: sops-age
#             subPath: keys.so
              
#           # 4. Set the XDG_CONFIG_HOME env variable to allow kustomize to detect the plugin
#           # env:
#           #   - name: XDG_CONFIG_HOME
#           #     value: /.config
#           #   ## addefd this line for sops enc
#           #   - name: SOPS_AGE_KEY_FILE
#           #     value: /.config/sops/age/keys.so
#           #   - name: KUSTOMIZE_PLUGIN_HOME
#           #     value: /.config/kustomize/

#           env:
#           - name: XDG_CONFIG_HOME
#             value: /.config
#           - name: SOPS_AGE_KEY_FILE
#             value: /.config/sops/age/keys.so
#         # - name: avp
#         #   command: [/var/run/argocd/argocd-cmp-server]
#         #   image: registry.access.redhat.com/ubi8
#         #   securityContext:
#         #     runAsNonRoot: true
#         #     runAsUser: 999
#         #   volumeMounts:
#         #     - mountPath: /var/run/argocd
#         #       name: var-files
#         #     - mountPath: /home/argocd/cmp-server/plugins
#         #       name: plugins
#         #     - mountPath: /tmp
#         #       name: tmp

#         #     # Register plugins into sidecar
#         #     - mountPath: /home/argocd/cmp-server/config/
#         #       subPath: avp.yaml
#         #       name: cmp-plugin
#         #     # Important: Mount tools into $PATH
#         #     - name: custom-tools
#         #       subPath: argocd-vault-plugin
#         #       mountPath: /usr/local/bin/argocd-vault-plugin
    

        
      



###Original File below
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  labels:
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/part-of: argocd
spec:
  replicas: 3
  selector:
    matchLabels:
      'app.kubernetes.io/name': argocd-repo-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-repo-server  
    spec:
      # 1. Define an emptyDir volume which will hold the custom binaries
      volumes:
        - name: custom-tools
          emptyDir: {}
        ## Added this
        - name: sops-age
          secret:
            secretName: sops-age
      # 2. Use an init container to download/copy custom binaries into the emptyDir
      containers:  
        - name: argocd-repo-server
          volumeMounts:
            - mountPath: /custom-tools
              name: custom-tools
            - mountPath: /usr/local/bin/kustomize
              name: custom-tools
              subPath: kustomize
              # Verify this matches a XDG_CONFIG_HOME=/.config env variable
            - mountPath: /.config/kustomize/plugin/viaduct.ai/v1/ksops/ksops.so #Default
            # - mountPath: /.config/kustomize/plugin/viaduct.ai/v1/ksops/ksop
              name: custom-tools
              # subPath: ksops.so default
              subPath: ksops
            ##Added mountPath
            - mountPath: /.config/sops/age/keys.so
              name: sops-age
              subPath: keys.so
              
          # 4. Set the XDG_CONFIG_HOME env variable to allow kustomize to detect the plugin
