argocd/inbuit-kustomize.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  labels:
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/part-of: argocd
spec:
  replicas: 2
  selector:
    matchLabels:
      'app.kubernetes.io/name': argocd-repo-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-repo-server  
    spec:
      imagePullSecrets:
      - name: private-registry
      # 1. Define an emptyDir volume which will hold the custom binaries
      volumes:
        - name: custom-tools
          emptyDir: {}
        ## Added this
        - name: sops-age
          secret:
            secretName: sops-age
      # 2. Use an init container to download/copy custom binaries into the emptyDir
      containers:  
        - name: argocd-repo-server
          volumeMounts:
            - mountPath: /custom-tools
              name: custom-tools
              # Verify this matches a XDG_CONFIG_HOME=/.config env variable
            # - mountPath: /.config/kustomize/plugin/viaduct.ai/v1/ksops/ksops.so #Default

            - mountPath: /.config/kustomize/plugin/viaduct.ai/v1/ksops/ksops
              name: custom-tools
              subPath: ksops
              # subPath: ksopsso #default
            ##Added mountPath
            - mountPath: /.config/sops/age/keys.so
              name: sops-age
              subPath: keys.so
              
          # 4. Set the XDG_CONFIG_HOME env variable to allow kustomize to detect the plugin
